7392
This bug one doesn't seem to have survived the merge to master.

{code}
  ~/code/scala ./build/quick/bin/scalac -d sandbox -classpath sandbox sandbox/a/A.scala 
  ~/code/scala ./build/quick/bin/scalac -d sandbox/out.jar -classpath sandbox/out.jar sandbox/b/B.scala 
sandbox/b/B.scala:1: error: illegal inheritance from sealed trait Sealed
class X extends Sealed // causes NPE
                ^
sandbox/b/B.scala:3: error: illegal inheritance from sealed trait Sealed
  val coffeesTableUnpack = new Sealed {} // causes NPE in different place, covered by first NPE
                               ^
{code}
